--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>maze start</title>
-    </head>
-    <body>
-        <h1>hello maze</h1>
-    </body>
+  <head>
+    <title>The Arrival</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <style>
+          h1 {
+                font-family: "Berkshire Swash", serif;
+                font-weight: 400;
+                font-style: normal;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>The Arrival</h1>
+    <img src="img/arrival.png" />
+    <p>
+      You stand before the ominous Blackwood Manor, its dark silhouette framed
+      by a stormy sky. The front door creaks open, inviting you in. Do you dare
+      to enter?
+    </p>
+    <ul>
+      <li><a href="foyer.html">Enter the manor</a></li>
+      <li><a href="#">Leave and explore the grounds</a></li>
+    </ul>
+  </body>
 </html>
