--- a/bathroom.html
+++ b/bathroom.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>room</title>
+        <title>bathroom</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1>room</h1>
-        <img src="img/cat.avif">
+        <img src="img/bathroom.png">
         <p>description</p>
         <ul>
             <li><a href="index.html">are you lost? RESTART</a></li>
