--- a/bathroom.html
+++ b/bathroom.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>bathroom</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-          href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap"
-          rel="stylesheet"
-        />
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <h1>room</h1>
-        <img src="img/bathroom.png">
-        <p>description</p>
-        <ul>
-            <li><a href="index.html">are you lost? RESTART</a></li>
-            <li><a href="#">meow</a></li>
-            <li><a href="dead2.html">MEOW</a></li>
-        </ul>
-    </body>
+  <head>
+    <title>bathroom</title>
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>room</h1>
+    <img src="img/bathroom.png" />
+    <p>description</p>
+    <ul>
+      <li><a href="index.html">are you lost? RESTART</a></li>
+      <li><a href="#">meow</a></li>
+      <li><a href="dead2.html">MEOW</a></li>
+    </ul>
+  </body>
 </html>
